refactor: agrupamento por pastas

--- a/destinos/destino1.html
+++ b/destinos/destino1.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Paris, França</h1>
-        <img src="louvre.jpg"
+        <img src="imagens/louvre.jpg"
             alt="Foto do museu do Louvre, um dos maiores pontos turísticos da França, recebendo mais de 8 milhões de turistas todos os anos.">
         <p>A França é um dos países mais visitados do mundo, famosa por sua cultura, gastronomia e história. Paris, a
             capital, é cheia de atrações </p>
@@ -46,7 +46,7 @@
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -57,7 +57,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </body>
 
