--- a/destinos/destino5.html
+++ b/destinos/destino5.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Londres, Reino Unido</h1>
-        <img src="londres.jpg" alt="Foto da cidade de Londres com turistas, o relógio Big Ben ao fundo, contrastando com o pôr do Sol.">
+        <img src="imagens/londres.jpg" alt="Foto da cidade de Londres com turistas, o relógio Big Ben ao fundo, contrastando com o pôr do Sol.">
         <p>Londres é uma das cidades mais vibrantes do mundo, conhecida por sua história, cultura rica e marcos icônicos como o Big Ben e o Palácio de Buckingham.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Londres">Saiba mais</a></p>
     </section>
@@ -40,7 +40,7 @@
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -51,7 +51,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
