--- a/destinos/destino6.html
+++ b/destinos/destino6.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Roma, Itália</h1>
-        <img src="roma.jpg" alt="Foto do Coliseu, um dos monumentos mais famosos de Roma e um ícone da história da Roma Antiga.">
+        <img src="imagens/roma.jpg" alt="Foto do Coliseu, um dos monumentos mais famosos de Roma e um ícone da história da Roma Antiga.">
         <p>Roma é uma cidade cheia de história e cultura, onde se encontram antigas ruínas romanas, igrejas barrocas e praças charmosas. É um destino imperdível para os amantes de história.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Roma">Saiba mais</a></p>
     </section>
@@ -40,7 +40,7 @@
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -51,7 +51,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
