--- a/destinos/destino8.html
+++ b/destinos/destino8.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Cape Town, África do Sul</h1>
-        <img src="capeTown.jpg" alt="Foto da orla da cidade, representando as suas belezas naturais em contraste com o Sol se pondo.">
+        <img src="imagens/capeTown.jpg" alt="Foto da orla da cidade, representando as suas belezas naturais em contraste com o Sol se pondo.">
         <p>Cape Town é uma cidade costeira cheia de beleza natural, conhecida pela famosa Table Mountain e suas praias paradisíacas.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Cidade_do_Cabo">Saiba mais</a></p>
     </section>
@@ -40,7 +40,7 @@
             <li><a href="destino6.html">Roma, Itália</a></li>
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -52,7 +52,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
