--- a/destinos/destino2.html
+++ b/destinos/destino2.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Tóquio, Japão</h1>
-        <img src="toquio.jpg" alt="Foto da cidade de Tóquio, paisagem noturna com luzes provenientes dos prédios.">
+        <img src="imagens/toquio.jpg" alt="Foto da cidade de Tóquio, paisagem noturna com luzes provenientes dos prédios.">
         <p>O Japão é conhecido pela sua combinação única de modernidade e tradição. Tóquio, sua capital, é uma metrópole
             vibrante e cheia de contrastes.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Tóquio">Saiba mais</a></p>
@@ -44,7 +44,7 @@
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -55,7 +55,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
