--- a/destinos/destino3.html
+++ b/destinos/destino3.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Nova York, EUA</h1>
-        <img src="novaIorque.jpg"
+        <img src="imagens/novaIorque.jpg"
             alt="Foto da cidade de Nova Iorque, vista aérea centralizando o Empire State Building e o pôr do Sol.">
         <p>Nova York, a cidade que nunca dorme, é uma das metrópoles mais dinâmicas e culturais do mundo. Seu skyline,
             repleto de arranha-céus, é inconfundível.</p>
@@ -45,7 +45,7 @@
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -56,7 +56,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
