--- a/destinos/destino4.html
+++ b/destinos/destino4.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Rio de Janeiro, Brasil</h1>
-        <img src="rioDeJaneiro.jpg" alt="Foto ">
+        <img src="imagens/rioDeJaneiro.jpg" alt="Foto ">
         <p>O Rio de Janeiro é uma cidade cheia de belezas naturais, praias incríveis e uma cultura vibrante. É famoso
             por seu carnaval e pontos turísticos como o Pão de Açúcar e o Cristo Redentor.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Rio_de_Janeiro">Saiba mais</a></p>
@@ -44,7 +44,7 @@
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -55,7 +55,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
