--- a/destinos/destino7.html
+++ b/destinos/destino7.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Sydney, Austrália</h1>
-        <img src="sydney.jpg" alt="Foto da Ópera de Sydney, um dos edifícios mais famosos do mundo, com seu design único e localização à beira-mar.">
+        <img src="imagens/sydney.jpg" alt="Foto da Ópera de Sydney, um dos edifícios mais famosos do mundo, com seu design único e localização à beira-mar.">
         <p>Sydney é uma cidade vibrante conhecida por suas praias, arquitetura moderna e uma das maiores atrações culturais do mundo: a Ópera de Sydney.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Sydney">Saiba mais</a></p>
     </section>
@@ -40,7 +40,7 @@
             <li><a href="destino6.html">Roma, Itália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
             <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -51,7 +51,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
