--- a/destinos/destino9.html
+++ b/destinos/destino9.html
@@ -11,7 +11,7 @@
 
     <section>
         <h1>Buenos Aires, Argentina</h1>
-        <img src="buenosAires.jpg" alt="Foto do Obelisco, um dos principais marcos de Buenos Aires, localizado na Avenida 9 de Julio.">
+        <img src="imagens/buenosAires.jpg" alt="Foto do Obelisco, um dos principais marcos de Buenos Aires, localizado na Avenida 9 de Julio.">
         <p>Buenos Aires, a capital da Argentina, é uma cidade vibrante, cheia de vida, tango e cultura. Seus bairros charmosos e arquitetura colonial são inesquecíveis.</p>
         <p><a href="https://pt.wikipedia.org/wiki/Buenos_Aires">Saiba mais</a></p>
     </section>
@@ -40,7 +40,7 @@
             <li><a href="destino6.html">Roma, Itália</a></li>
             <li><a href="destino7.html">Sydney, Austrália</a></li>
             <li><a href="destino8.html">Cape Town, África do Sul</a></li>
-            <li><a href="index.html">Voltar à página inicial</a></li>
+            <li><a href="../index.html">Voltar à página inicial</a></li>
         </ul>
     </section>
     
@@ -51,7 +51,7 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </body>
 
 </html>
