--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
     <h1>Bem-vindo ao Meu Catálogo de Viagens</h1>
     <p>Este site foi criado para compartilhar os melhores destinos de viagem e ajudar você a planejar sua próxima
         aventura. Explore as páginas de cada destino e descubra os lugares mais fascinantes do mundo!</p>
+    
+    <img src="destinos/imagens/capa.jpg" alt="Foto de uma mulher de costas numa cadeira de praia, ilustrando o tema de viagens.">
 
     <section>
         <h2>Destinos</h2>
         <ul>
-            <li><a href="destino1.html">Paris, França</a></li>
-            <li><a href="destino2.html">Tóquio, Japão</a></li>
-            <li><a href="destino3.html">Nova York, EUA</a></li>
-            <li><a href="destino4.html">Rio de Janeiro, Brasil</a></li>
-            <li><a href="destino5.html">Londres, Reino Unido</a></li>
-            <li><a href="destino6.html">Roma, Itália</a></li>
-            <li><a href="destino7.html">Sydney, Austrália</a></li>
-            <li><a href="destino8.html">Cape Town, África do Sul</a></li>
-            <li><a href="destino9.html">Buenos Aires, Argentina</a></li>
+            <li><a href="destinos/destino1.html">Paris, França</a></li>
+            <li><a href="destinos/destino2.html">Tóquio, Japão</a></li>
+            <li><a href="destinos/destino3.html">Nova York, EUA</a></li>
+            <li><a href="destinos/destino4.html">Rio de Janeiro, Brasil</a></li>
+            <li><a href="destinos/destino5.html">Londres, Reino Unido</a></li>
+            <li><a href="destinos/destino6.html">Roma, Itália</a></li>
+            <li><a href="destinos/destino7.html">Sydney, Austrália</a></li>
+            <li><a href="destinos/destino8.html">Cape Town, África do Sul</a></li>
+            <li><a href="destinos/destino9.html">Buenos Aires, Argentina</a></li>
         </ul>
     </section>
 
