style: troca de imagens

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Site de Viagens</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <h1>Bem-vindo ao Meu Catálogo de Viagens</h1>
     <p>Este site foi criado para compartilhar os melhores destinos de viagem e ajudar você a planejar sua próxima
         aventura. Explore as páginas de cada destino e descubra os lugares mais fascinantes do mundo!</p>
-    
-    <img src="destinos/imagens/capa.jpg" alt="Foto de uma mulher de costas numa cadeira de praia, ilustrando o tema de viagens.">
+
+    <img src="destinos/imagens/capa.jpg"
+        alt="Foto de uma mulher de costas numa cadeira de praia, ilustrando o tema de viagens.">
 
     <section>
         <h2>Destinos</h2>
@@ -35,8 +38,6 @@
         <p>“É preciso viajar para aprender.”</p>
         <p>~ Mark Twain</p>
     </footer>
-
-    <link rel="stylesheet" href="style.css">
 </body>
 
 </html>
