--- a/destinos/destino9.html
+++ b/destinos/destino9.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Buenos Aires, Argentina</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
