--- a/destinos/destino1.html
+++ b/destinos/destino1.html
@@ -12,8 +12,8 @@
 
     <section>
         <h1>Paris, França</h1>
-        <img src="imagens/louvre.jpg"
-            alt="Foto do museu do Louvre, um dos maiores pontos turísticos da França, recebendo mais de 8 milhões de turistas todos os anos.">
+        <img src="imagens/paris.jpg"
+            alt="Foto de Paris, enquadrando a Torre Eiffel">
         <p>A França é um dos países mais visitados do mundo, famosa por sua cultura, gastronomia e história. Paris, a
             capital, é cheia de atrações </p>
         <p><a href="https://pt.wikipedia.org/wiki/Paris">Saiba mais</a></p>
